kubernetes/apps/argocd/ingress-fixed.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`argocd.homelab.local`)
    kind: Rule
    middlewares:
    - name: authelia
    services:
    - name: argocd-server
      port: 80
  tls:
    secretName: argocd-homelab-tls
